--- a/index.html
+++ b/index.html
@@ -31,6 +31,9 @@
 
     <title>ecommerce_woocom</title>
     <link rel="manifest" href="manifest.json">
+
+    <meta name="theme-color" content="#1B4B66"> <!-- Change to your desired color -->
+    <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
 </head>
 <body>
 <script src="flutter_bootstrap.js" async></script>
