--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
     <!-- Favicon -->
     <link rel="icon" type="image/png" href="favicon.png"/>
 
-    <title>ecommerce_woocom</title>
+    <title>Woocom</title>
     <link rel="manifest" href="manifest.json">
 </head>
 <body>
